<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#FFFFFF" >
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        
        <FrameLayout 
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0">
           
        </FrameLayout>
        
        
        <TabWidget 
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bottom_menu_height"
            android:layout_weight="0.0"
            android:visibility="gone"/>
        
        <RadioGroup
              android:id="@+id/main_tab"             
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:gravity="center_vertical"
              android:layout_gravity="bottom">
              
            <RadioButton
                android:id="@+id/radio_button0"
                style="@style/main_tab_bottom"
                android:drawableTop="@drawable/nearby"
                android:text="@string/nearby" />

            <RadioButton
                android:id="@+id/radio_button1"
                style="@style/main_tab_bottom"
                android:drawableTop="@drawable/search"
                android:text="@string/search" />

            <RadioButton
                android:id="@+id/radio_button2"
                style="@style/main_tab_bottom"
                android:drawableTop="@drawable/route"
                android:text="@string/route" />

            <RadioButton
                android:id="@+id/radio_button3"
                style="@style/main_tab_bottom"
                android:text="@string/user"
                android:drawableTop="@drawable/user"/>
        </RadioGroup>
    </LinearLayout>
    
</TabHost>
