<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/search2_background_grey"
     >

    <LinearLayout
        android:id="@+id/settingTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="left|center_vertical"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/settingBackButton"
            android:layout_width="45dp"
            android:layout_height="fill_parent"
            android:background="@drawable/backbutton_selector"
            android:clickable="true" />

        <TextView
            android:id="@+id/ridingRecordTitleText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/settingTitle"
            android:background="@drawable/title_blue"
            android:gravity="fill"
            android:textColor="@color/title_text_color"
            android:textSize="18sp" />
    </LinearLayout>
	
    <!--1级layout-->
    
    <LinearLayout
        android:id="@+id/settingGPSLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/settingPGSTitleText"
            android:layout_width="100dp"
            android:layout_height="30dp"
           	android:layout_marginTop="10dp"
            android:text="@string/GPSTitle"
            android:gravity="center"
            android:textColor="@color/title_text_color"
            android:background="@drawable/title_blue"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/settingEnablePGSTitleText"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:text="@string/enableGPS"
            android:gravity="center"
            android:background="@drawable/title_blue"
            android:textColor="@color/title_text_color"
            android:textSize="16sp"/>
        <LinearLayout
	        android:id="@+id/settingEnableGPSLayout"
	        android:layout_width="match_parent"
	        android:layout_height="45dp"
	        android:gravity="left|center_vertical"
	        android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/settingEnableGPSRecordText"
	            android:layout_width="220dp"
	            android:layout_height="30dp"
            	android:layout_marginLeft="30dp"
	            android:background="@drawable/title_blue"
	            android:gravity="center"
	            android:text="@string/enableGPSRecord"
	            android:textColor="@color/title_text_color"
	            android:textSize="16sp" />

	        <CheckBox
			    android:id="@+id/enableGPSRecordcheckBox"
			    android:layout_width="wrap_content"
			    android:layout_height="30dp" />
	    </LinearLayout>
    </LinearLayout>
	
    <!--1级layout-->
    
    <LinearLayout
        android:id="@+id/bindWithNetworkLayout"
        android:layout_width="fill_parent"
        android:layout_height="170dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/bindWithNetworkTitleText"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/title_blue"
            android:gravity="center"
            android:text="@string/bindwithSocailNetworkTitle"
            android:textColor="@color/title_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/twitter"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/title_blue"
            android:gravity="center"
            android:text="@string/twitter"
            android:textColor="@color/title_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/facebook"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/title_blue"
            android:gravity="center"
            android:text="@string/facebook"
            android:textColor="@color/title_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/google"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/title_blue"
            android:gravity="center"
            android:text="@string/google"
            android:textColor="@color/title_text_color"
            android:textSize="16sp" />
    </LinearLayout>
    
  <!--1级layout-->
  
  <LinearLayout
        android:id="@+id/routePreferLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/routePreferTitleText"
            android:layout_width="100dp"
            android:layout_height="30dp"
           	android:layout_marginTop="10dp"
            android:text="@string/routePreferTitle"
            android:gravity="center"
            android:textColor="@color/title_text_color"
            android:background="@drawable/title_blue"
            android:textSize="16sp"/>

        <LinearLayout
	        android:id="@+id/sceneryRouteLayout"
	        android:layout_width="match_parent"
	        android:layout_height="35dp"
	        android:layout_marginTop="5dp"
	        android:gravity="left|center_vertical"
	        android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/sceneryRouteText"
	            android:layout_width="220dp"
	            android:layout_height="30dp"
            	android:layout_marginLeft="30dp"
	            android:background="@drawable/title_blue"
	            android:gravity="center"
	            android:text="@string/sceneryRoute"
	            android:textColor="@color/title_text_color"
	            android:textSize="16sp" />

	        <CheckBox
			    android:id="@+id/sceneryRouteCheckBox"
			    android:layout_width="wrap_content"
			    android:layout_height="30dp" />
	    </LinearLayout>
	    <LinearLayout
	        android:id="@+id/fastestRouteLayout"
	        android:layout_width="match_parent"
	        android:layout_height="45dp"
	        android:gravity="left|center_vertical"
	        android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/fastestRouteText"
	            android:layout_width="220dp"
	            android:layout_height="30dp"
            	android:layout_marginLeft="30dp"
	            android:background="@drawable/title_blue"
	            android:gravity="center"
	            android:text="@string/fastestRoute"
	            android:textColor="@color/title_text_color"
	            android:textSize="16sp" />

	        <CheckBox
			    android:id="@+id/fastestRouteCheckBox"
			    android:layout_width="wrap_content"
			    android:layout_height="30dp" />
	    </LinearLayout>
    </LinearLayout>
</LinearLayout>
