<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/search2_background_grey"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/userInfoLayout"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:orientation="horizontal" >
	
        <TextView
            android:id="@+id/userimageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/userimage"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            
            <TextView
                android:id="@+id/username"
                style="@style/Text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
            	android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:gravity="left|center_vertical"
                android:text="@string/username"/>

            <TextView
                android:id="@+id/userid"
                style="@style/Text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/userid"
                android:layout_gravity="center"
                android:gravity="left|center_vertical"
                android:layout_marginLeft="10dp"
            	android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/bikeid"
                style="@style/Text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/bikeid"
                android:layout_gravity="center"
                android:gravity="left|center_vertical"
                android:layout_marginLeft="10dp"
            	android:layout_marginTop="10dp" />

        </LinearLayout>
   </LinearLayout>
   <TextView
       android:id="@+id/seperateLine"
       android:layout_width="fill_parent"
       android:layout_height="2dp"
       android:layout_marginLeft="3dp"
       android:background="@drawable/seperatelineblue"/>
	<LinearLayout
	    android:id="@+id/userInfoLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >

        <TextView
            android:id="@+id/settingbtn"
            android:layout_width="250dp"
            android:layout_height="38dp"
            android:layout_marginTop="80dp"
            android:textSize="16sp"
			android:layout_gravity="center"
            android:text="@string/setting"
            android:gravity="center"
            android:textColor="@color/title_text_color"
            android:background="@drawable/btn_selector"
            android:clickable="true"/>
        <TextView
            android:id="@+id/ridingrecordbtn"
            android:layout_width="250dp"
            android:layout_marginTop="30dp"
            android:layout_height="38dp"
            android:textSize="16sp"
			android:layout_gravity="center"
			android:gravity="center"
            android:text="@string/gotoridingRecord"
            android:textColor="@color/title_text_color"
            android:background="@drawable/btn_selector"
            android:clickable="true" />
        <TextView
            android:id="@+id/logoutbtn"
            android:layout_width="250dp"
            android:layout_marginTop="30dp"
            android:layout_height="38dp"
            android:textSize="16sp"
			android:layout_gravity="center"
            android:text="@string/logout"
            android:gravity="center"
            android:textColor="@color/title_text_color"
            android:background="@drawable/btn_selector"
            android:clickable="true"/>      
    </LinearLayout>
</LinearLayout>